@@ -1117,7 +1117,10 @@ body{
   background:white; }
 
 a{
-  color:#33c3f0; }
+  color:#33c3f0;
+  -webkit-transition:all ease-in-out 400ms;
+  -o-transition:all ease-in-out 400ms;
+  transition:all ease-in-out 400ms; }
   a,a:hover{
   text-decoration:none; }
   a:hover{
@@ -1141,7 +1144,10 @@ a{
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
-  user-select:none; }
+  user-select:none;
+  -webkit-transition:all ease-in-out 400ms;
+  -o-transition:all ease-in-out 400ms;
+  transition:all ease-in-out 400ms; }
   .button,.button:hover, .button:focus{
   color:#3e3e3e;
   background-color:white; }
@@ -1206,9 +1212,9 @@ input[type="date"], input[type="datetime"], input[type="datetime-local"], input[
   margin-bottom:1.5rem;
   border:1px solid #e6e6e6;
   border-radius:0.25rem;
-  -webkit-transition:border-color ease-in-out .15s;
-  -o-transition:border-color ease-in-out .15s;
-  transition:border-color ease-in-out .15s;
+  -webkit-transition:all ease-in-out 400ms;
+  -o-transition:all ease-in-out 400ms;
+  transition:all ease-in-out 400ms;
   font-size:1.5rem;
   padding:1rem 1rem;
   height:4rem;
@@ -1234,9 +1240,9 @@ textarea{
   margin-bottom:1.5rem;
   border:1px solid #e6e6e6;
   border-radius:0.25rem;
-  -webkit-transition:border-color ease-in-out .15s;
-  -o-transition:border-color ease-in-out .15s;
-  transition:border-color ease-in-out .15s;
+  -webkit-transition:all ease-in-out 400ms;
+  -o-transition:all ease-in-out 400ms;
+  transition:all ease-in-out 400ms;
   max-width:100%; }
   textarea:focus{
     background:white;
@@ -1256,9 +1262,9 @@ select{
   margin-bottom:1.5rem;
   border:1px solid #e6e6e6;
   border-radius:0.25rem;
-  -webkit-transition:border-color ease-in-out .15s;
-  -o-transition:border-color ease-in-out .15s;
-  transition:border-color ease-in-out .15s;
+  -webkit-transition:all ease-in-out 400ms;
+  -o-transition:all ease-in-out 400ms;
+  transition:all ease-in-out 400ms;
   font-size:1.5rem;
   padding:1rem 1rem;
   height:4rem;
