@@ -73,6 +73,11 @@ $font-color:                    rgb(62, 62, 62) !default;
 
 
 
+// animation
+$animation-speed-slow:          1000ms !default;
+$animation-speed-fast:          400ms !default;
+
+
 // misc
 $generic-margin-bottom:         1.5rem !default; // pre, dl, figure, table, p, ul, ol, form, blockquote
 $header-margin-bottom:          1rem !default; // h1-h6
@@ -86,6 +91,7 @@ $link-color:                    map-get($colors, primary) !default;
 $link-color-hover:              darken($link-color, $darken-hover-percent) !default;
 $link-decoration:               none !default;
 $link-decoration-hover:         none !default;
+$link-transision-speed:         $animation-speed-fast !default;
 
 
 
@@ -99,6 +105,8 @@ $button-font-size:              1.5rem !default;
 $button-font-weight:            400 !default;
 $button-padding-y:              1rem !default;
 $button-padding-x:              1rem !default;
+$button-transision-speed:       $animation-speed-fast !default;
+
 // the below applies to the default button class only `.button`
 $button-default-bg-color:       map-get($colors, white) !default;
 
@@ -113,6 +121,7 @@ $input-font-color:              $font-color !default;
 $input-padding-y:               1rem !default;
 $input-padding-x:               1rem !default;
 $input-margin-bottom:           1.5rem !default;
+$input-transision-speed:        $animation-speed-fast !default;
 
 $input-background-focus:        $input-background !default;
 $input-border-color-focus:      map-get($colors, primary) !default;
