@@ -401,7 +401,6 @@ p q r s t u v w x y z { | } ~ </pre>
             </section>
             <section id="forms">
                 <header><h1>Form elements</h1></header>
-                <form>
                     <fieldset id="forms__input">
                         <legend>Input fields</legend>
                         <p>
@@ -559,8 +558,8 @@ p q r s t u v w x y z { | } ~ </pre>
                         </p>
                     </fieldset>
                     <p><a href="#top">[Top]</a></p>
-                </form>
             </section>
         </main>
+        <script> </script>
     </body>
 </html>
